test_fm/_test21.nj
//
// shadowing method changes visibility
//

public class Main extends Object {
  public static Integer x() {
  }
}

class Aux extends Main {
  static Integer x() {
  }
}
